--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,70 @@
 
+
+
+
+
+
+
+
+
+
+
+
+
+/*games page*/
+/*
+colors:
+#5be0e6 - light blue
+#ffab59 - light orange
+#ff78ff - light pink
+#3c0a3c - dark purple
+*/
+#games_page {
+    text-align: center;
+    margin: 40px;
+}
+#intro {
+    font-size: 1.3em;
+    margin-left: 300px;
+    margin-right: 300px;
+}
+input {
+    width: 100%;
+}
+#games_page h1 {
+    font-size: 3em;
+    margin-bottom: 0;
+}
+#posters {
+    display: grid;
+    grid-template-columns: 350px 350px 350px 350px;
+    grid-template-rows: 550px 550px;
+}
+.game img {
+    width: 150px;
+}
+details {
+    max-width: 100%;
+    display: flex;
+    justify-self: center;
+
+}
+#ratings_explained {
+    background-color: #3c0a3c;
+    color: #5be0e6;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    grid-template-rows: auto auto auto;
+}
+#ratings_explained h2 {
+    grid-column: 1 / span 5;
+    font-size: 2em;
+}
+#ratings_explained p {
+    grid-row: 2/3;
+    grid-column: 1 / span 5;
+    font-size: 1.5em;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
