--- a/styles.css
+++ b/styles.css
@@ -20,14 +20,37 @@ body {
    background-color: #FFF5E9;
 }
 header {
-   background-color: #FFF5E9;
+    display: grid;
+    grid-template-columns: 150px auto;
+    grid-gap: 30px;
+    align-items: center;
+    padding: 10px 20px;
 }
 .logo {
-   border-radius: 10%;
+   display: grid;
+   grid-column: 1/1;
+   border-radius: 50%;
+   width: 170px;
+   height: 170px;
 }
 nav {
-   border: solid;
-   border-color: #3C0A3C;
+    display: grid;
+    grid-column: 2/4;
+    padding: 40px 40px;
+    font-size: 1.5rem; 
+    background-image: url("images/navbackdrop.png");
+    background-repeat: repeat;   
+    background-size: 200px;  
+}
+nav a {
+     display: inline-block;  
+     margin: 0 45px;           
+     text-decoration: none;
+     color: #5be0e6;
+     text-shadow: 2px 2px 5px #5be0e6;
+}
+nav a:hover {
+    color: #95e8ec;
 }
 h1 {
    color: #3C0A3C;
