--- a/styles.css
+++ b/styles.css
@@ -16,15 +16,18 @@ Paragraph Font: Coolvetica
 */
 
 /*home page*/
-body {
-   background-color: #FFF5E9;
-}
 header {
     display: grid;
     grid-template-columns: 150px auto;
     grid-gap: 30px;
     align-items: center;
     padding: 10px 20px;
+    background-image: url("images/headerbackdrop.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;   
+    background-position: center;
+    background-size: 100% 100%;
+    background-position: right;
 }
 .logo {
    display: grid;
@@ -32,15 +35,13 @@ header {
    border-radius: 50%;
    width: 170px;
    height: 170px;
+   margin-top: 80px;
 }
 nav {
     display: grid;
     grid-column: 2/4;
     padding: 40px 40px;
-    font-size: 1.5rem; 
-    background-image: url("images/navbackdrop.png");
-    background-repeat: repeat;   
-    background-size: 200px;  
+    font-size: 1.5rem;   
 }
 nav a {
      display: inline-block;  
@@ -48,14 +49,49 @@ nav a {
      text-decoration: none;
      color: #5be0e6;
      text-shadow: 2px 2px 5px #5be0e6;
+     margin-top: 80px;
 }
 nav a:hover {
     color: #95e8ec;
 }
-h1 {
-   color: #3C0A3C;
+#searchbar {
+    margin-left: 210px;
+    margin-bottom: 50px;
+    width: 400px;
 }
-
+body {
+   background-color: #FFF5E9;
+}
+.hero {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+h1 {
+    display: grid;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    place-self: center;
+    color: #3C0A3C;
+    width: 400px;
+    margin-top: -280px;
+    font-size: 3rem;
+}
+#heroimage {
+    float: right;
+    margin-right: 20px;
+    border-radius: 5%; 
+}
+.button {
+    width: 130px;
+    height: 75px;
+    cursor: pointer;
+    background-color: #3c0a3c;
+    color: #ff78ff;
+    font-size: 25px; 
+    text-shadow: 2px 2px 5px #ff78ff; 
+    border-radius: 12px;
+}
 /*games page*/
 /*
 colors:
