--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ h1 {
     text-shadow: 2px 2px 5px #ff78ff; 
     border-radius: 12px;
 }
+
 /*games page*/
 /*
 colors:
@@ -115,14 +116,16 @@ input {
 #games_page h1 {
     font-size: 3em;
     margin-bottom: 0;
+    margin-top: 100px;
 }
 #posters {
     display: grid;
     grid-template-columns: 350px 350px 350px 350px;
-    grid-template-rows: 550px 550px;
+    grid-template-rows: 700px 700px;
 }
 .game img {
-    width: 150px;
+    width: 300px;
+    height: 400px;
 }
 details {
     max-width: 100%;
