--- a/styles.css
+++ b/styles.css
@@ -56,11 +56,11 @@ nav a {
 nav a:hover {
     color: #95e8ec;
 }
-#searchbar {
-    margin-left: 210px;
-    margin-bottom: 50px;
-    margin-top: 50px;
-    width: 900px;
+.searchbar {
+    width: 100%;
+    padding: 12px 16px;
+    border: none;
+    border-radius: 999px;
 }
 body {
    background-color: #FFF5E9;
