--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,7 @@ colors:
     font-size: 1.3em;
     margin-left: 300px;
     margin-right: 300px;
+    margin-bottom: 50px;
 }
 input {
     width: 100%;
